// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dva účastníci 1`] = `
<div
  className="UcastniciDigest_div UcastniciTable_container"
>
  <div>
    <input
      className="Filterable_input"
      onBlur={[Function]}
      onChange={[Function]}
      onKeyDown={[Function]}
      placeholder="Filtr na příjmení a jméno"
      type="text"
      value=""
    />
    <div
      className="Filterable_kategorie btn-group"
    >
      <span
        className="KategorieFilter"
      >
        <button
          className="btn btn-default"
          disabled={false}
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "rgba(176, 255, 181, 0.5)",
            }
          }
          type="button"
        >
          <span>
            <img
              alt="maraton"
              height={30}
              src="maraton.png"
              title="maraton"
            />
             
            maraton
          </span>
        </button>
      </span>
      <span
        className="KategorieFilter"
      >
        <button
          className="btn btn-default"
          disabled={false}
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "rgba(255, 131, 122, 0.5)",
            }
          }
          type="button"
        >
          <span>
            <img
              alt="půlmaraton"
              height={30}
              src="pulmaraton.png"
              title="půlmaraton"
            />
             
            půlmaraton
          </span>
        </button>
      </span>
      <span
        className="KategorieFilter"
      >
        <button
          className="btn btn-default"
          disabled={false}
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "rgba(239, 224, 35, 0.5)",
            }
          }
          type="button"
        >
          <span>
            <img
              alt="cyklo"
              height={30}
              src="cyklo.png"
              title="cyklo"
            />
             
            cyklo
          </span>
        </button>
      </span>
      <span
        className="KategorieFilter"
      >
        <button
          className="btn btn-default"
          disabled={false}
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "rgba(80, 124, 239, 0.5)",
            }
          }
          type="button"
        >
          <span>
            <img
              alt="koloběžka"
              height={30}
              src="kolobezka.png"
              title="koloběžka"
            />
             
            koloběžka
          </span>
        </button>
      </span>
      <span
        className="KategorieFilter"
      >
        <button
          className="btn btn-default"
          disabled={false}
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "rgba(215, 147, 255, 0.5)",
            }
          }
          type="button"
        >
          <span>
            <img
              alt="pěší"
              height={30}
              src="pesi.png"
              title="pěší"
            />
             
            pěší
          </span>
        </button>
      </span>
    </div>
    <span
      className="Filterable_zobrazeno"
    >
      zobrazeno: 
      <span
        className="badge"
      >
        2
      </span>
    </span>
  </div>
  <div
    className="UcastniciTableResponsive-div"
  >
    <div
      className="UcastniciTable_GridRow"
    >
      <div
        className="UcastniciTable_LeftSideGridContainer"
        style={
          Object {
            "flexBasis": "290px",
            "top": 0,
          }
        }
      >
        <div
          aria-label="grid"
          aria-readonly={true}
          className="ReactVirtualized__Grid UcastniciTable_HeaderGrid"
          id={undefined}
          onScroll={[Function]}
          role="grid"
          style={
            Object {
              "WebkitOverflowScrolling": "touch",
              "boxSizing": "border-box",
              "direction": "ltr",
              "height": 35,
              "overflowX": "hidden",
              "overflowY": "hidden",
              "position": "relative",
              "width": 290,
              "willChange": "transform",
            }
          }
          tabIndex={0}
        >
          <div
            className="ReactVirtualized__Grid__innerScrollContainer"
            role="rowgroup"
            style={
              Object {
                "height": 35,
                "maxHeight": 35,
                "maxWidth": 290,
                "overflow": "hidden",
                "pointerEvents": "",
                "position": "relative",
                "width": 290,
              }
            }
          >
            <div
              className="UcastniciTable_headerCell"
              style={
                Object {
                  "height": 35,
                  "left": 0,
                  "position": "absolute",
                  "top": 0,
                  "width": 100,
                }
              }
            >
              <a
                className="SortHeader_a"
                onClick={[Function]}
              >
                příjmení
                 
                
              </a>
            </div>
            <div
              className="UcastniciTable_headerCell"
              style={
                Object {
                  "height": 35,
                  "left": 100,
                  "position": "absolute",
                  "top": 0,
                  "width": 90,
                }
              }
            >
              <a
                className="SortHeader_a"
                onClick={[Function]}
              >
                jméno
                 
                
              </a>
            </div>
            <div
              className="UcastniciTable_headerCell"
              style={
                Object {
                  "height": 35,
                  "left": 190,
                  "position": "absolute",
                  "top": 0,
                  "width": 100,
                }
              }
            >
              <a
                className="SortHeader_a"
                onClick={[Function]}
              >
                narození
                 
                
              </a>
            </div>
          </div>
        </div>
      </div>
      <div
        className="UcastniciTable_LeftSideGridContainer"
        style={
          Object {
            "flexBasis": "290px",
            "top": 35,
          }
        }
      >
        <div
          aria-label="grid"
          aria-readonly={true}
          className="ReactVirtualized__Grid UcastniciTable_LeftSideGrid"
          id={undefined}
          onScroll={[Function]}
          role="grid"
          style={
            Object {
              "WebkitOverflowScrolling": "touch",
              "boxSizing": "border-box",
              "direction": "ltr",
              "height": 70,
              "overflowX": "hidden",
              "overflowY": "hidden",
              "position": "relative",
              "width": 290,
              "willChange": "transform",
            }
          }
          tabIndex={0}
        >
          <div
            className="ReactVirtualized__Grid__innerScrollContainer"
            role="rowgroup"
            style={
              Object {
                "height": 70,
                "maxHeight": 70,
                "maxWidth": 290,
                "overflow": "hidden",
                "pointerEvents": "",
                "position": "relative",
                "width": 290,
              }
            }
          >
            <div
              className="align-left UcastniciTable_oddRow UcastniciTable_cell"
              style={
                Object {
                  "height": 35,
                  "left": 0,
                  "position": "absolute",
                  "top": 0,
                  "width": 100,
                }
              }
            >
              Balabák
            </div>
            <div
              className="align-left UcastniciTable_oddRow UcastniciTable_cell"
              style={
                Object {
                  "height": 35,
                  "left": 100,
                  "position": "absolute",
                  "top": 0,
                  "width": 90,
                }
              }
            >
              Roman
            </div>
            <div
              className="align-right UcastniciTable_oddRow UcastniciTable_cell"
              style={
                Object {
                  "height": 35,
                  "left": 190,
                  "position": "absolute",
                  "top": 0,
                  "width": 100,
                }
              }
            >
              1956
            </div>
            <div
              className="align-left UcastniciTable_evenRow UcastniciTable_cell"
              style={
                Object {
                  "height": 35,
                  "left": 0,
                  "position": "absolute",
                  "top": 35,
                  "width": 100,
                }
              }
            >
              Sukdoláková
            </div>
            <div
              className="align-left UcastniciTable_evenRow UcastniciTable_cell"
              style={
                Object {
                  "height": 35,
                  "left": 100,
                  "position": "absolute",
                  "top": 35,
                  "width": 90,
                }
              }
            >
              Martina
            </div>
            <div
              className="align-right UcastniciTable_evenRow UcastniciTable_cell"
              style={
                Object {
                  "height": 35,
                  "left": 190,
                  "position": "absolute",
                  "top": 35,
                  "width": 100,
                }
              }
            >
              7. 12. 1963
            </div>
          </div>
        </div>
      </div>
      <div
        className="UcastniciTable_GridColumn"
      >
        <div>
          <div
            style={
              Object {
                "height": 35,
                "width": 900,
              }
            }
          >
            <div
              aria-label="grid"
              aria-readonly={true}
              className="ReactVirtualized__Grid UcastniciTable_HeaderGrid"
              id={undefined}
              onScroll={[Function]}
              role="grid"
              style={
                Object {
                  "WebkitOverflowScrolling": "touch",
                  "boxSizing": "border-box",
                  "direction": "ltr",
                  "height": 35,
                  "overflowX": "hidden",
                  "overflowY": "hidden",
                  "position": "relative",
                  "width": 1190,
                  "willChange": "transform",
                }
              }
              tabIndex={0}
            >
              <div
                className="ReactVirtualized__Grid__innerScrollContainer"
                role="rowgroup"
                style={
                  Object {
                    "height": 35,
                    "maxHeight": 35,
                    "maxWidth": 1190,
                    "overflow": "hidden",
                    "pointerEvents": "",
                    "position": "relative",
                    "width": 1190,
                  }
                }
              >
                <div
                  className="UcastniciTable_headerCell"
                  style={
                    Object {
                      "height": 35,
                      "left": 290,
                      "position": "absolute",
                      "top": 0,
                      "width": 50,
                    }
                  }
                >
                  2001
                </div>
                <div
                  className="UcastniciTable_headerCell"
                  style={
                    Object {
                      "height": 35,
                      "left": 340,
                      "position": "absolute",
                      "top": 0,
                      "width": 50,
                    }
                  }
                >
                  2002
                </div>
                <div
                  className="UcastniciTable_headerCell"
                  style={
                    Object {
                      "height": 35,
                      "left": 390,
                      "position": "absolute",
                      "top": 0,
                      "width": 50,
                    }
                  }
                >
                  2003
                </div>
                <div
                  className="UcastniciTable_headerCell"
                  style={
                    Object {
                      "height": 35,
                      "left": 440,
                      "position": "absolute",
                      "top": 0,
                      "width": 50,
                    }
                  }
                >
                  2004
                </div>
                <div
                  className="UcastniciTable_headerCell"
                  style={
                    Object {
                      "height": 35,
                      "left": 490,
                      "position": "absolute",
                      "top": 0,
                      "width": 50,
                    }
                  }
                >
                  2005
                </div>
                <div
                  className="UcastniciTable_headerCell"
                  style={
                    Object {
                      "height": 35,
                      "left": 540,
                      "position": "absolute",
                      "top": 0,
                      "width": 50,
                    }
                  }
                >
                  2006
                </div>
                <div
                  className="UcastniciTable_headerCell"
                  style={
                    Object {
                      "height": 35,
                      "left": 590,
                      "position": "absolute",
                      "top": 0,
                      "width": 50,
                    }
                  }
                >
                  2007
                </div>
                <div
                  className="UcastniciTable_headerCell"
                  style={
                    Object {
                      "height": 35,
                      "left": 640,
                      "position": "absolute",
                      "top": 0,
                      "width": 50,
                    }
                  }
                >
                  2008
                </div>
                <div
                  className="UcastniciTable_headerCell"
                  style={
                    Object {
                      "height": 35,
                      "left": 690,
                      "position": "absolute",
                      "top": 0,
                      "width": 50,
                    }
                  }
                >
                  2009
                </div>
                <div
                  className="UcastniciTable_headerCell"
                  style={
                    Object {
                      "height": 35,
                      "left": 740,
                      "position": "absolute",
                      "top": 0,
                      "width": 50,
                    }
                  }
                >
                  2010
                </div>
                <div
                  className="UcastniciTable_headerCell"
                  style={
                    Object {
                      "height": 35,
                      "left": 790,
                      "position": "absolute",
                      "top": 0,
                      "width": 50,
                    }
                  }
                >
                  2011
                </div>
                <div
                  className="UcastniciTable_headerCell"
                  style={
                    Object {
                      "height": 35,
                      "left": 840,
                      "position": "absolute",
                      "top": 0,
                      "width": 50,
                    }
                  }
                >
                  2012
                </div>
                <div
                  className="UcastniciTable_headerCell"
                  style={
                    Object {
                      "height": 35,
                      "left": 890,
                      "position": "absolute",
                      "top": 0,
                      "width": 50,
                    }
                  }
                >
                  2013
                </div>
                <div
                  className="UcastniciTable_headerCell"
                  style={
                    Object {
                      "height": 35,
                      "left": 940,
                      "position": "absolute",
                      "top": 0,
                      "width": 50,
                    }
                  }
                >
                  2014
                </div>
                <div
                  className="UcastniciTable_headerCell"
                  style={
                    Object {
                      "height": 35,
                      "left": 990,
                      "position": "absolute",
                      "top": 0,
                      "width": 50,
                    }
                  }
                >
                  2015
                </div>
                <div
                  className="UcastniciTable_headerCell"
                  style={
                    Object {
                      "height": 35,
                      "left": 1040,
                      "position": "absolute",
                      "top": 0,
                      "width": 50,
                    }
                  }
                >
                  2016
                </div>
                <div
                  className="UcastniciTable_headerCell"
                  style={
                    Object {
                      "height": 35,
                      "left": 1090,
                      "position": "absolute",
                      "top": 0,
                      "width": 50,
                    }
                  }
                >
                  2017
                </div>
                <div
                  className="UcastniciTable_headerCell"
                  style={
                    Object {
                      "height": 35,
                      "left": 1140,
                      "position": "absolute",
                      "top": 0,
                      "width": 50,
                    }
                  }
                >
                  2018
                </div>
              </div>
            </div>
          </div>
          <div
            style={
              Object {
                "height": 70,
                "width": 1190,
              }
            }
          >
            <div
              aria-label="grid"
              aria-readonly={true}
              className="ReactVirtualized__Grid UcastniciTable_BodyGrid"
              id={undefined}
              onScroll={[Function]}
              role="grid"
              style={
                Object {
                  "WebkitOverflowScrolling": "touch",
                  "boxSizing": "border-box",
                  "direction": "ltr",
                  "height": 70,
                  "overflowX": "hidden",
                  "overflowY": "hidden",
                  "position": "relative",
                  "width": 1190,
                  "willChange": "transform",
                }
              }
              tabIndex={0}
            >
              <div
                className="ReactVirtualized__Grid__innerScrollContainer"
                role="rowgroup"
                style={
                  Object {
                    "height": 70,
                    "maxHeight": 70,
                    "maxWidth": 1190,
                    "overflow": "hidden",
                    "pointerEvents": "",
                    "position": "relative",
                    "width": 1190,
                  }
                }
              >
                <div
                  className="UcastniciTable_oddRow UcastniciTable_cell"
                  style={
                    Object {
                      "height": 35,
                      "left": 290,
                      "position": "absolute",
                      "top": 0,
                      "width": 50,
                    }
                  }
                >
                  
                </div>
                <div
                  className="UcastniciTable_oddRow UcastniciTable_cell"
                  style={
                    Object {
                      "height": 35,
                      "left": 340,
                      "position": "absolute",
                      "top": 0,
                      "width": 50,
                    }
                  }
                >
                  
                </div>
                <div
                  className="UcastniciTable_oddRow UcastniciTable_cell"
                  style={
                    Object {
                      "height": 35,
                      "left": 390,
                      "position": "absolute",
                      "top": 0,
                      "width": 50,
                    }
                  }
                >
                  
                </div>
                <div
                  className="UcastniciTable_oddRow UcastniciTable_cell"
                  style={
                    Object {
                      "height": 35,
                      "left": 440,
                      "position": "absolute",
                      "top": 0,
                      "width": 50,
                    }
                  }
                >
                  
                </div>
                <div
                  className="UcastniciTable_oddRow UcastniciTable_cell"
                  style={
                    Object {
                      "height": 35,
                      "left": 490,
                      "position": "absolute",
                      "top": 0,
                      "width": 50,
                    }
                  }
                >
                  
                </div>
                <div
                  className="UcastniciTable_oddRow UcastniciTable_cell"
                  style={
                    Object {
                      "height": 35,
                      "left": 540,
                      "position": "absolute",
                      "top": 0,
                      "width": 50,
                    }
                  }
                >
                  
                </div>
                <div
                  className="UcastniciTable_oddRow UcastniciTable_cell"
                  style={
                    Object {
                      "height": 35,
                      "left": 590,
                      "position": "absolute",
                      "top": 0,
                      "width": 50,
                    }
                  }
                >
                  
                </div>
                <div
                  className="UcastniciTable_oddRow UcastniciTable_cell"
                  style={
                    Object {
                      "height": 35,
                      "left": 640,
                      "position": "absolute",
                      "top": 0,
                      "width": 50,
                    }
                  }
                >
                  
                </div>
                <div
                  className="UcastniciTable_oddRow UcastniciTable_cell"
                  style={
                    Object {
                      "height": 35,
                      "left": 690,
                      "position": "absolute",
                      "top": 0,
                      "width": 50,
                    }
                  }
                >
                  
                </div>
                <div
                  className="UcastniciTable_oddRow UcastniciTable_cell"
                  style={
                    Object {
                      "height": 35,
                      "left": 740,
                      "position": "absolute",
                      "top": 0,
                      "width": 50,
                    }
                  }
                >
                  
                </div>
                <div
                  className="UcastniciTable_oddRow UcastniciTable_cell"
                  style={
                    Object {
                      "height": 35,
                      "left": 790,
                      "position": "absolute",
                      "top": 0,
                      "width": 50,
                    }
                  }
                >
                  
                </div>
                <div
                  className="UcastniciTable_oddRow UcastniciTable_cell"
                  style={
                    Object {
                      "height": 35,
                      "left": 840,
                      "position": "absolute",
                      "top": 0,
                      "width": 50,
                    }
                  }
                >
                  
                </div>
                <div
                  className="UcastniciTable_oddRow UcastniciTable_cell"
                  style={
                    Object {
                      "height": 35,
                      "left": 890,
                      "position": "absolute",
                      "top": 0,
                      "width": 50,
                    }
                  }
                >
                  
                </div>
                <div
                  className="UcastniciTable_oddRow UcastniciTable_cell"
                  style={
                    Object {
                      "height": 35,
                      "left": 940,
                      "position": "absolute",
                      "top": 0,
                      "width": 50,
                    }
                  }
                >
                  
                </div>
                <div
                  className="UcastniciTable_oddRow UcastniciTable_cell"
                  style={
                    Object {
                      "height": 35,
                      "left": 990,
                      "position": "absolute",
                      "top": 0,
                      "width": 50,
                    }
                  }
                >
                  
                </div>
                <div
                  className="UcastniciDigest--undefined UcastniciTable_oddRow UcastniciTable_cell"
                  style={
                    Object {
                      "height": 35,
                      "left": 1040,
                      "position": "absolute",
                      "top": 0,
                      "width": 50,
                    }
                  }
                >
                  ✗
                </div>
                <div
                  className="UcastniciDigest--maraton UcastniciTable_oddRow UcastniciTable_cell"
                  style={
                    Object {
                      "height": 35,
                      "left": 1090,
                      "position": "absolute",
                      "top": 0,
                      "width": 50,
                    }
                  }
                >
                  ✓
                </div>
                <div
                  className="UcastniciDigest--půlmaraton UcastniciTable_oddRow UcastniciTable_cell"
                  style={
                    Object {
                      "height": 35,
                      "left": 1140,
                      "position": "absolute",
                      "top": 0,
                      "width": 50,
                    }
                  }
                >
                  ✓
                </div>
                <div
                  className="UcastniciTable_evenRow UcastniciTable_cell"
                  style={
                    Object {
                      "height": 35,
                      "left": 290,
                      "position": "absolute",
                      "top": 35,
                      "width": 50,
                    }
                  }
                >
                  
                </div>
                <div
                  className="UcastniciTable_evenRow UcastniciTable_cell"
                  style={
                    Object {
                      "height": 35,
                      "left": 340,
                      "position": "absolute",
                      "top": 35,
                      "width": 50,
                    }
                  }
                >
                  
                </div>
                <div
                  className="UcastniciTable_evenRow UcastniciTable_cell"
                  style={
                    Object {
                      "height": 35,
                      "left": 390,
                      "position": "absolute",
                      "top": 35,
                      "width": 50,
                    }
                  }
                >
                  
                </div>
                <div
                  className="UcastniciTable_evenRow UcastniciTable_cell"
                  style={
                    Object {
                      "height": 35,
                      "left": 440,
                      "position": "absolute",
                      "top": 35,
                      "width": 50,
                    }
                  }
                >
                  
                </div>
                <div
                  className="UcastniciTable_evenRow UcastniciTable_cell"
                  style={
                    Object {
                      "height": 35,
                      "left": 490,
                      "position": "absolute",
                      "top": 35,
                      "width": 50,
                    }
                  }
                >
                  
                </div>
                <div
                  className="UcastniciTable_evenRow UcastniciTable_cell"
                  style={
                    Object {
                      "height": 35,
                      "left": 540,
                      "position": "absolute",
                      "top": 35,
                      "width": 50,
                    }
                  }
                >
                  
                </div>
                <div
                  className="UcastniciTable_evenRow UcastniciTable_cell"
                  style={
                    Object {
                      "height": 35,
                      "left": 590,
                      "position": "absolute",
                      "top": 35,
                      "width": 50,
                    }
                  }
                >
                  
                </div>
                <div
                  className="UcastniciTable_evenRow UcastniciTable_cell"
                  style={
                    Object {
                      "height": 35,
                      "left": 640,
                      "position": "absolute",
                      "top": 35,
                      "width": 50,
                    }
                  }
                >
                  
                </div>
                <div
                  className="UcastniciTable_evenRow UcastniciTable_cell"
                  style={
                    Object {
                      "height": 35,
                      "left": 690,
                      "position": "absolute",
                      "top": 35,
                      "width": 50,
                    }
                  }
                >
                  
                </div>
                <div
                  className="UcastniciTable_evenRow UcastniciTable_cell"
                  style={
                    Object {
                      "height": 35,
                      "left": 740,
                      "position": "absolute",
                      "top": 35,
                      "width": 50,
                    }
                  }
                >
                  
                </div>
                <div
                  className="UcastniciTable_evenRow UcastniciTable_cell"
                  style={
                    Object {
                      "height": 35,
                      "left": 790,
                      "position": "absolute",
                      "top": 35,
                      "width": 50,
                    }
                  }
                >
                  
                </div>
                <div
                  className="UcastniciTable_evenRow UcastniciTable_cell"
                  style={
                    Object {
                      "height": 35,
                      "left": 840,
                      "position": "absolute",
                      "top": 35,
                      "width": 50,
                    }
                  }
                >
                  
                </div>
                <div
                  className="UcastniciTable_evenRow UcastniciTable_cell"
                  style={
                    Object {
                      "height": 35,
                      "left": 890,
                      "position": "absolute",
                      "top": 35,
                      "width": 50,
                    }
                  }
                >
                  
                </div>
                <div
                  className="UcastniciTable_evenRow UcastniciTable_cell"
                  style={
                    Object {
                      "height": 35,
                      "left": 940,
                      "position": "absolute",
                      "top": 35,
                      "width": 50,
                    }
                  }
                >
                  
                </div>
                <div
                  className="UcastniciDigest--undefined UcastniciTable_evenRow UcastniciTable_cell"
                  style={
                    Object {
                      "height": 35,
                      "left": 990,
                      "position": "absolute",
                      "top": 35,
                      "width": 50,
                    }
                  }
                >
                  ✗
                </div>
                <div
                  className="UcastniciTable_evenRow UcastniciTable_cell"
                  style={
                    Object {
                      "height": 35,
                      "left": 1040,
                      "position": "absolute",
                      "top": 35,
                      "width": 50,
                    }
                  }
                >
                  
                </div>
                <div
                  className="UcastniciDigest--maraton UcastniciTable_evenRow UcastniciTable_cell"
                  style={
                    Object {
                      "height": 35,
                      "left": 1090,
                      "position": "absolute",
                      "top": 35,
                      "width": 50,
                    }
                  }
                >
                  ✓
                </div>
                <div
                  className="UcastniciDigest--půlmaraton UcastniciTable_evenRow UcastniciTable_cell"
                  style={
                    Object {
                      "height": 35,
                      "left": 1140,
                      "position": "absolute",
                      "top": 35,
                      "width": 50,
                    }
                  }
                >
                  ?
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`žádný účastník 1`] = `
<div
  className="UcastniciDigest_div UcastniciTable_container"
>
  <div>
    <input
      className="Filterable_input"
      onBlur={[Function]}
      onChange={[Function]}
      onKeyDown={[Function]}
      placeholder="Filtr na příjmení a jméno"
      type="text"
      value=""
    />
    <div
      className="Filterable_kategorie btn-group"
    >
      <span
        className="KategorieFilter"
      >
        <button
          className="btn btn-default"
          disabled={false}
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "rgba(176, 255, 181, 0.5)",
            }
          }
          type="button"
        >
          <span>
            <img
              alt="maraton"
              height={30}
              src="maraton.png"
              title="maraton"
            />
             
            maraton
          </span>
        </button>
      </span>
      <span
        className="KategorieFilter"
      >
        <button
          className="btn btn-default"
          disabled={false}
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "rgba(255, 131, 122, 0.5)",
            }
          }
          type="button"
        >
          <span>
            <img
              alt="půlmaraton"
              height={30}
              src="pulmaraton.png"
              title="půlmaraton"
            />
             
            půlmaraton
          </span>
        </button>
      </span>
      <span
        className="KategorieFilter"
      >
        <button
          className="btn btn-default"
          disabled={false}
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "rgba(239, 224, 35, 0.5)",
            }
          }
          type="button"
        >
          <span>
            <img
              alt="cyklo"
              height={30}
              src="cyklo.png"
              title="cyklo"
            />
             
            cyklo
          </span>
        </button>
      </span>
      <span
        className="KategorieFilter"
      >
        <button
          className="btn btn-default"
          disabled={false}
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "rgba(80, 124, 239, 0.5)",
            }
          }
          type="button"
        >
          <span>
            <img
              alt="koloběžka"
              height={30}
              src="kolobezka.png"
              title="koloběžka"
            />
             
            koloběžka
          </span>
        </button>
      </span>
      <span
        className="KategorieFilter"
      >
        <button
          className="btn btn-default"
          disabled={false}
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "rgba(215, 147, 255, 0.5)",
            }
          }
          type="button"
        >
          <span>
            <img
              alt="pěší"
              height={30}
              src="pesi.png"
              title="pěší"
            />
             
            pěší
          </span>
        </button>
      </span>
    </div>
    <span
      className="Filterable_zobrazeno"
    >
      zobrazeno: 
      <span
        className="badge"
      >
        0
      </span>
    </span>
  </div>
  <div
    className="UcastniciTableResponsive-div"
  >
    <div
      className="UcastniciTable_GridRow"
    >
      <div
        className="UcastniciTable_LeftSideGridContainer"
        style={
          Object {
            "flexBasis": "290px",
            "top": 0,
          }
        }
      >
        <div
          aria-label="grid"
          aria-readonly={true}
          className="ReactVirtualized__Grid UcastniciTable_HeaderGrid"
          id={undefined}
          onScroll={[Function]}
          role="grid"
          style={
            Object {
              "WebkitOverflowScrolling": "touch",
              "boxSizing": "border-box",
              "direction": "ltr",
              "height": 35,
              "overflowX": "hidden",
              "overflowY": "hidden",
              "position": "relative",
              "width": 290,
              "willChange": "transform",
            }
          }
          tabIndex={0}
        >
          <div
            className="ReactVirtualized__Grid__innerScrollContainer"
            role="rowgroup"
            style={
              Object {
                "height": 35,
                "maxHeight": 35,
                "maxWidth": 290,
                "overflow": "hidden",
                "pointerEvents": "",
                "position": "relative",
                "width": 290,
              }
            }
          >
            <div
              className="UcastniciTable_headerCell"
              style={
                Object {
                  "height": 35,
                  "left": 0,
                  "position": "absolute",
                  "top": 0,
                  "width": 100,
                }
              }
            >
              <a
                className="SortHeader_a"
                onClick={[Function]}
              >
                příjmení
                 
                
              </a>
            </div>
            <div
              className="UcastniciTable_headerCell"
              style={
                Object {
                  "height": 35,
                  "left": 100,
                  "position": "absolute",
                  "top": 0,
                  "width": 90,
                }
              }
            >
              <a
                className="SortHeader_a"
                onClick={[Function]}
              >
                jméno
                 
                
              </a>
            </div>
            <div
              className="UcastniciTable_headerCell"
              style={
                Object {
                  "height": 35,
                  "left": 190,
                  "position": "absolute",
                  "top": 0,
                  "width": 100,
                }
              }
            >
              <a
                className="SortHeader_a"
                onClick={[Function]}
              >
                narození
                 
                
              </a>
            </div>
          </div>
        </div>
      </div>
      <div
        className="UcastniciTable_LeftSideGridContainer"
        style={
          Object {
            "flexBasis": "290px",
            "top": 35,
          }
        }
      >
        <div
          aria-label="grid"
          aria-readonly={true}
          className="ReactVirtualized__Grid UcastniciTable_LeftSideGrid"
          id={undefined}
          onScroll={[Function]}
          role="grid"
          style={
            Object {
              "WebkitOverflowScrolling": "touch",
              "boxSizing": "border-box",
              "direction": "ltr",
              "height": 0,
              "overflowX": "auto",
              "overflowY": "hidden",
              "position": "relative",
              "width": 290,
              "willChange": "transform",
            }
          }
          tabIndex={0}
        />
      </div>
      <div
        className="UcastniciTable_GridColumn"
      >
        <div>
          <div
            style={
              Object {
                "height": 35,
                "width": 900,
              }
            }
          >
            <div
              aria-label="grid"
              aria-readonly={true}
              className="ReactVirtualized__Grid UcastniciTable_HeaderGrid"
              id={undefined}
              onScroll={[Function]}
              role="grid"
              style={
                Object {
                  "WebkitOverflowScrolling": "touch",
                  "boxSizing": "border-box",
                  "direction": "ltr",
                  "height": 35,
                  "overflowX": "hidden",
                  "overflowY": "hidden",
                  "position": "relative",
                  "width": 1190,
                  "willChange": "transform",
                }
              }
              tabIndex={0}
            >
              <div
                className="ReactVirtualized__Grid__innerScrollContainer"
                role="rowgroup"
                style={
                  Object {
                    "height": 35,
                    "maxHeight": 35,
                    "maxWidth": 1190,
                    "overflow": "hidden",
                    "pointerEvents": "",
                    "position": "relative",
                    "width": 1190,
                  }
                }
              >
                <div
                  className="UcastniciTable_headerCell"
                  style={
                    Object {
                      "height": 35,
                      "left": 290,
                      "position": "absolute",
                      "top": 0,
                      "width": 50,
                    }
                  }
                >
                  2001
                </div>
                <div
                  className="UcastniciTable_headerCell"
                  style={
                    Object {
                      "height": 35,
                      "left": 340,
                      "position": "absolute",
                      "top": 0,
                      "width": 50,
                    }
                  }
                >
                  2002
                </div>
                <div
                  className="UcastniciTable_headerCell"
                  style={
                    Object {
                      "height": 35,
                      "left": 390,
                      "position": "absolute",
                      "top": 0,
                      "width": 50,
                    }
                  }
                >
                  2003
                </div>
                <div
                  className="UcastniciTable_headerCell"
                  style={
                    Object {
                      "height": 35,
                      "left": 440,
                      "position": "absolute",
                      "top": 0,
                      "width": 50,
                    }
                  }
                >
                  2004
                </div>
                <div
                  className="UcastniciTable_headerCell"
                  style={
                    Object {
                      "height": 35,
                      "left": 490,
                      "position": "absolute",
                      "top": 0,
                      "width": 50,
                    }
                  }
                >
                  2005
                </div>
                <div
                  className="UcastniciTable_headerCell"
                  style={
                    Object {
                      "height": 35,
                      "left": 540,
                      "position": "absolute",
                      "top": 0,
                      "width": 50,
                    }
                  }
                >
                  2006
                </div>
                <div
                  className="UcastniciTable_headerCell"
                  style={
                    Object {
                      "height": 35,
                      "left": 590,
                      "position": "absolute",
                      "top": 0,
                      "width": 50,
                    }
                  }
                >
                  2007
                </div>
                <div
                  className="UcastniciTable_headerCell"
                  style={
                    Object {
                      "height": 35,
                      "left": 640,
                      "position": "absolute",
                      "top": 0,
                      "width": 50,
                    }
                  }
                >
                  2008
                </div>
                <div
                  className="UcastniciTable_headerCell"
                  style={
                    Object {
                      "height": 35,
                      "left": 690,
                      "position": "absolute",
                      "top": 0,
                      "width": 50,
                    }
                  }
                >
                  2009
                </div>
                <div
                  className="UcastniciTable_headerCell"
                  style={
                    Object {
                      "height": 35,
                      "left": 740,
                      "position": "absolute",
                      "top": 0,
                      "width": 50,
                    }
                  }
                >
                  2010
                </div>
                <div
                  className="UcastniciTable_headerCell"
                  style={
                    Object {
                      "height": 35,
                      "left": 790,
                      "position": "absolute",
                      "top": 0,
                      "width": 50,
                    }
                  }
                >
                  2011
                </div>
                <div
                  className="UcastniciTable_headerCell"
                  style={
                    Object {
                      "height": 35,
                      "left": 840,
                      "position": "absolute",
                      "top": 0,
                      "width": 50,
                    }
                  }
                >
                  2012
                </div>
                <div
                  className="UcastniciTable_headerCell"
                  style={
                    Object {
                      "height": 35,
                      "left": 890,
                      "position": "absolute",
                      "top": 0,
                      "width": 50,
                    }
                  }
                >
                  2013
                </div>
                <div
                  className="UcastniciTable_headerCell"
                  style={
                    Object {
                      "height": 35,
                      "left": 940,
                      "position": "absolute",
                      "top": 0,
                      "width": 50,
                    }
                  }
                >
                  2014
                </div>
                <div
                  className="UcastniciTable_headerCell"
                  style={
                    Object {
                      "height": 35,
                      "left": 990,
                      "position": "absolute",
                      "top": 0,
                      "width": 50,
                    }
                  }
                >
                  2015
                </div>
                <div
                  className="UcastniciTable_headerCell"
                  style={
                    Object {
                      "height": 35,
                      "left": 1040,
                      "position": "absolute",
                      "top": 0,
                      "width": 50,
                    }
                  }
                >
                  2016
                </div>
                <div
                  className="UcastniciTable_headerCell"
                  style={
                    Object {
                      "height": 35,
                      "left": 1090,
                      "position": "absolute",
                      "top": 0,
                      "width": 50,
                    }
                  }
                >
                  2017
                </div>
                <div
                  className="UcastniciTable_headerCell"
                  style={
                    Object {
                      "height": 35,
                      "left": 1140,
                      "position": "absolute",
                      "top": 0,
                      "width": 50,
                    }
                  }
                >
                  2018
                </div>
              </div>
            </div>
          </div>
          <div
            style={
              Object {
                "height": 0,
                "width": 1190,
              }
            }
          >
            <div
              aria-label="grid"
              aria-readonly={true}
              className="ReactVirtualized__Grid UcastniciTable_BodyGrid"
              id={undefined}
              onScroll={[Function]}
              role="grid"
              style={
                Object {
                  "WebkitOverflowScrolling": "touch",
                  "boxSizing": "border-box",
                  "direction": "ltr",
                  "height": 0,
                  "overflowX": "auto",
                  "overflowY": "hidden",
                  "position": "relative",
                  "width": 1190,
                  "willChange": "transform",
                }
              }
              tabIndex={0}
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
